practica1/y.output
Terminals unused in grammar

   '/'


Grammar

    0 $accept: programa $end

    1 $@1: /* empty */

    2 $@2: /* empty */

    3 $@3: /* empty */

    4 programa: tPROGRAMA tIDENTIFICADOR ';' $@1 declaracion_variables $@2 declaracion_acciones $@3 bloque_instrucciones

    5 declaracion_variables: /* empty */

    6 $@4: /* empty */

    7 declaracion_variables: $@4 lista_declaraciones ';'

    8 lista_declaraciones: lista_declaraciones ';' declaracion
    9                    | declaracion

   10 declaracion: tipo_variables identificadores

   11 declaracion_parametros: tipo_variables identificadores_parametros

   12 tipo_variables: tENTERO
   13               | tCARACTER
   14               | tBOOLEANO
   15               | tVECTOR '[' expresion ']' tDE tipo_variables2

   16 tipo_variables2: tENTERO
   17                | tCARACTER
   18                | tBOOLEANO

   19 identificadores: tIDENTIFICADOR
   20                | identificadores ',' tIDENTIFICADOR

   21 identificadores_parametros: tIDENTIFICADOR
   22                           | identificadores_parametros ',' tIDENTIFICADOR

   23 declaracion_acciones: /* empty */
   24                     | declaracion_acciones declaracion_accion

   25 $@5: /* empty */

   26 $@6: /* empty */

   27 $@7: /* empty */

   28 declaracion_accion: cabecera_accion ';' $@5 declaracion_variables $@6 declaracion_acciones $@7 bloque_instrucciones

   29 $@8: /* empty */

   30 cabecera_accion: tACCION tIDENTIFICADOR $@8 parametros_formales

   31 parametros_formales: /* empty */
   32                    | '(' lista_parametros ')'

   33 lista_parametros: lista_parametros ';' parametros
   34                 | parametros
   35                 | /* empty */

   36 parametros: clase_parametros declaracion_parametros

   37 clase_parametros: tVAL
   38                 | tREF

   39 $@9: /* empty */

   40 bloque_instrucciones: tPRINCIPIO $@9 lista_instrucciones tFIN

   41 lista_instrucciones: lista_instrucciones instruccion
   42                    | /* empty */

   43 instruccion: leer
   44            | escribir
   45            | asignacion
   46            | seleccion
   47            | mientras_que
   48            | invocacion_accion

   49 leer: tLEER '(' lista_asignables ')' ';'

   50 lista_asignables: tIDENTIFICADOR
   51                 | lista_asignables ',' tIDENTIFICADOR

   52 escribir: tESCRIBIR '(' lista_escribibles ')' ';'

   53 lista_escribibles: lista_escribibles ',' expresion
   54                  | expresion

   55 asignacion: tIDENTIFICADOR tOPAS expresion ';'
   56           | tIDENTIFICADOR '[' expresion ']' tOPAS expresion ';'

   57 $@10: /* empty */

   58 mientras_que: tMQ expresion $@10 lista_instrucciones tFMQ

   59 $@11: /* empty */

   60 seleccion: tSI expresion $@11 tENT lista_instrucciones resto_seleccion tFSI

   61 resto_seleccion: /* empty */
   62                | tSI_NO lista_instrucciones

   63 $@12: /* empty */

   64 invocacion_accion: tIDENTIFICADOR argumentos $@12 ';'

   65 $@13: /* empty */

   66 invocacion_accion: tIDENTIFICADOR $@13 ';'

   67 argumentos: '(' lista_expresiones ')'

   68 lista_expresiones: lista_expresiones ',' expresion
   69                  | expresion

   70 expresion: expresion_simple
   71          | expresion operador_relacional expresion_simple

   72 operador_relacional: '='
   73                    | '<'
   74                    | '>'
   75                    | tMEI
   76                    | tMAI
   77                    | tNI

   78 expresion_simple: termino
   79                 | expresion_simple operador_aditivo termino

   80 operador_aditivo: '+'
   81                 | '-'
   82                 | tOR

   83 termino: factor
   84        | termino operador_multiplicativo factor

   85 operador_multiplicativo: '*'
   86                        | tDIV
   87                        | tMOD
   88                        | tAND

   89 factor: '-' factor
   90       | tNOT factor
   91       | '(' expresion ')'
   92       | tENTACAR '(' expresion ')'
   93       | tCARAENT '(' expresion ')'
   94       | tIDENTIFICADOR '[' expresion ']'
   95       | tIDENTIFICADOR
   96       | tCONSTENTERA
   97       | tCONSTCHAR
   98       | tCONSTCAD
   99       | tTRUE
  100       | tFALSE


Terminals, with rules where they appear

$end (0) 0
'(' (40) 32 49 52 67 91 92 93
')' (41) 32 49 52 67 91 92 93
'*' (42) 85
'+' (43) 80
',' (44) 20 22 51 53 68
'-' (45) 81 89
'/' (47)
';' (59) 4 7 8 28 33 49 52 55 56 64 66
'<' (60) 73
'=' (61) 72
'>' (62) 74
'[' (91) 15 56 94
']' (93) 15 56 94
error (256)
tPROGRAMA (258) 4
tACCION (259) 30
tCONSTENTERA (260) 96
tCONSTCHAR (261) 97
tCONSTCAD (262) 98
tTRUE (263) 99
tFALSE (264) 100
tENTACAR (265) 92
tCARAENT (266) 93
tIDENTIFICADOR (267) 4 19 20 21 22 30 50 51 55 56 64 66 94 95
tENTERO (268) 12 16
tCARACTER (269) 13 17
tBOOLEANO (270) 14 18
tESCRIBIR (271) 52
tLEER (272) 49
tOPAS (273) 55 56
tPRINCIPIO (274) 40
tFIN (275) 40
tAND (276) 88
tOR (277) 82
tNOT (278) 90
tMQ (279) 58
tFMQ (280) 58
tMEI (281) 75
tMAI (282) 76
tNI (283) 77
tMOD (284) 87
tDIV (285) 86
tSI (286) 60
tENT (287) 60
tSI_NO (288) 62
tFSI (289) 60
tVAL (290) 37
tREF (291) 38
tVECTOR (292) 15
tDE (293) 15
MENOSU (294)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
programa (54)
    on left: 4, on right: 0
$@1 (55)
    on left: 1, on right: 4
$@2 (56)
    on left: 2, on right: 4
$@3 (57)
    on left: 3, on right: 4
declaracion_variables (58)
    on left: 5 7, on right: 4 28
$@4 (59)
    on left: 6, on right: 7
lista_declaraciones (60)
    on left: 8 9, on right: 7 8
declaracion (61)
    on left: 10, on right: 8 9
declaracion_parametros (62)
    on left: 11, on right: 36
tipo_variables (63)
    on left: 12 13 14 15, on right: 10 11
tipo_variables2 (64)
    on left: 16 17 18, on right: 15
identificadores (65)
    on left: 19 20, on right: 10 20
identificadores_parametros (66)
    on left: 21 22, on right: 11 22
declaracion_acciones (67)
    on left: 23 24, on right: 4 24 28
declaracion_accion (68)
    on left: 28, on right: 24
$@5 (69)
    on left: 25, on right: 28
$@6 (70)
    on left: 26, on right: 28
$@7 (71)
    on left: 27, on right: 28
cabecera_accion (72)
    on left: 30, on right: 28
$@8 (73)
    on left: 29, on right: 30
parametros_formales (74)
    on left: 31 32, on right: 30
lista_parametros (75)
    on left: 33 34 35, on right: 32 33
parametros (76)
    on left: 36, on right: 33 34
clase_parametros (77)
    on left: 37 38, on right: 36
bloque_instrucciones (78)
    on left: 40, on right: 4 28
$@9 (79)
    on left: 39, on right: 40
lista_instrucciones (80)
    on left: 41 42, on right: 40 41 58 60 62
instruccion (81)
    on left: 43 44 45 46 47 48, on right: 41
leer (82)
    on left: 49, on right: 43
lista_asignables (83)
    on left: 50 51, on right: 49 51
escribir (84)
    on left: 52, on right: 44
lista_escribibles (85)
    on left: 53 54, on right: 52 53
asignacion (86)
    on left: 55 56, on right: 45
mientras_que (87)
    on left: 58, on right: 47
$@10 (88)
    on left: 57, on right: 58
seleccion (89)
    on left: 60, on right: 46
$@11 (90)
    on left: 59, on right: 60
resto_seleccion (91)
    on left: 61 62, on right: 60
invocacion_accion (92)
    on left: 64 66, on right: 48
$@12 (93)
    on left: 63, on right: 64
$@13 (94)
    on left: 65, on right: 66
argumentos (95)
    on left: 67, on right: 64
lista_expresiones (96)
    on left: 68 69, on right: 67 68
expresion (97)
    on left: 70 71, on right: 15 53 54 55 56 58 60 68 69 71 91 92 93
    94
operador_relacional (98)
    on left: 72 73 74 75 76 77, on right: 71
expresion_simple (99)
    on left: 78 79, on right: 70 71 79
operador_aditivo (100)
    on left: 80 81 82, on right: 79
termino (101)
    on left: 83 84, on right: 78 79 84
operador_multiplicativo (102)
    on left: 85 86 87 88, on right: 84
factor (103)
    on left: 89 90 91 92 93 94 95 96 97 98 99 100, on right: 83 84
    89 90


state 0

    0 $accept: . programa $end

    tPROGRAMA  shift, and go to state 1

    programa  go to state 2


state 1

    4 programa: tPROGRAMA . tIDENTIFICADOR ';' $@1 declaracion_variables $@2 declaracion_acciones $@3 bloque_instrucciones

    tIDENTIFICADOR  shift, and go to state 3


state 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


state 3

    4 programa: tPROGRAMA tIDENTIFICADOR . ';' $@1 declaracion_variables $@2 declaracion_acciones $@3 bloque_instrucciones

    ';'  shift, and go to state 5


state 4

    0 $accept: programa $end .

    $default  accept


state 5

    4 programa: tPROGRAMA tIDENTIFICADOR ';' . $@1 declaracion_variables $@2 declaracion_acciones $@3 bloque_instrucciones

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


state 6

    4 programa: tPROGRAMA tIDENTIFICADOR ';' $@1 . declaracion_variables $@2 declaracion_acciones $@3 bloque_instrucciones

    tACCION     reduce using rule 5 (declaracion_variables)
    tPRINCIPIO  reduce using rule 5 (declaracion_variables)
    $default    reduce using rule 6 ($@4)

    declaracion_variables  go to state 7
    $@4                    go to state 8


state 7

    4 programa: tPROGRAMA tIDENTIFICADOR ';' $@1 declaracion_variables . $@2 declaracion_acciones $@3 bloque_instrucciones

    $default  reduce using rule 2 ($@2)

    $@2  go to state 9


state 8

    7 declaracion_variables: $@4 . lista_declaraciones ';'

    tENTERO    shift, and go to state 10
    tCARACTER  shift, and go to state 11
    tBOOLEANO  shift, and go to state 12
    tVECTOR    shift, and go to state 13

    lista_declaraciones  go to state 14
    declaracion          go to state 15
    tipo_variables       go to state 16


state 9

    4 programa: tPROGRAMA tIDENTIFICADOR ';' $@1 declaracion_variables $@2 . declaracion_acciones $@3 bloque_instrucciones

    $default  reduce using rule 23 (declaracion_acciones)

    declaracion_acciones  go to state 17


state 10

   12 tipo_variables: tENTERO .

    $default  reduce using rule 12 (tipo_variables)


state 11

   13 tipo_variables: tCARACTER .

    $default  reduce using rule 13 (tipo_variables)


state 12

   14 tipo_variables: tBOOLEANO .

    $default  reduce using rule 14 (tipo_variables)


state 13

   15 tipo_variables: tVECTOR . '[' expresion ']' tDE tipo_variables2

    '['  shift, and go to state 18


state 14

    7 declaracion_variables: $@4 lista_declaraciones . ';'
    8 lista_declaraciones: lista_declaraciones . ';' declaracion

    ';'  shift, and go to state 19


state 15

    9 lista_declaraciones: declaracion .

    $default  reduce using rule 9 (lista_declaraciones)


state 16

   10 declaracion: tipo_variables . identificadores

    tIDENTIFICADOR  shift, and go to state 20

    identificadores  go to state 21


state 17

    4 programa: tPROGRAMA tIDENTIFICADOR ';' $@1 declaracion_variables $@2 declaracion_acciones . $@3 bloque_instrucciones
   24 declaracion_acciones: declaracion_acciones . declaracion_accion

    tACCION  shift, and go to state 22

    $default  reduce using rule 3 ($@3)

    $@3                 go to state 23
    declaracion_accion  go to state 24
    cabecera_accion     go to state 25


state 18

   15 tipo_variables: tVECTOR '[' . expresion ']' tDE tipo_variables2

    tCONSTENTERA    shift, and go to state 26
    tCONSTCHAR      shift, and go to state 27
    tCONSTCAD       shift, and go to state 28
    tTRUE           shift, and go to state 29
    tFALSE          shift, and go to state 30
    tENTACAR        shift, and go to state 31
    tCARAENT        shift, and go to state 32
    tIDENTIFICADOR  shift, and go to state 33
    tNOT            shift, and go to state 34
    '-'             shift, and go to state 35
    '('             shift, and go to state 36

    expresion         go to state 37
    expresion_simple  go to state 38
    termino           go to state 39
    factor            go to state 40


state 19

    7 declaracion_variables: $@4 lista_declaraciones ';' .
    8 lista_declaraciones: lista_declaraciones ';' . declaracion

    tENTERO    shift, and go to state 10
    tCARACTER  shift, and go to state 11
    tBOOLEANO  shift, and go to state 12
    tVECTOR    shift, and go to state 13

    $default  reduce using rule 7 (declaracion_variables)

    declaracion     go to state 41
    tipo_variables  go to state 16


state 20

   19 identificadores: tIDENTIFICADOR .

    $default  reduce using rule 19 (identificadores)


state 21

   10 declaracion: tipo_variables identificadores .
   20 identificadores: identificadores . ',' tIDENTIFICADOR

    ','  shift, and go to state 42

    $default  reduce using rule 10 (declaracion)


state 22

   30 cabecera_accion: tACCION . tIDENTIFICADOR $@8 parametros_formales

    tIDENTIFICADOR  shift, and go to state 43


state 23

    4 programa: tPROGRAMA tIDENTIFICADOR ';' $@1 declaracion_variables $@2 declaracion_acciones $@3 . bloque_instrucciones

    tPRINCIPIO  shift, and go to state 44

    bloque_instrucciones  go to state 45


state 24

   24 declaracion_acciones: declaracion_acciones declaracion_accion .

    $default  reduce using rule 24 (declaracion_acciones)


state 25

   28 declaracion_accion: cabecera_accion . ';' $@5 declaracion_variables $@6 declaracion_acciones $@7 bloque_instrucciones

    ';'  shift, and go to state 46


state 26

   96 factor: tCONSTENTERA .

    $default  reduce using rule 96 (factor)


state 27

   97 factor: tCONSTCHAR .

    $default  reduce using rule 97 (factor)


state 28

   98 factor: tCONSTCAD .

    $default  reduce using rule 98 (factor)


state 29

   99 factor: tTRUE .

    $default  reduce using rule 99 (factor)


state 30

  100 factor: tFALSE .

    $default  reduce using rule 100 (factor)


state 31

   92 factor: tENTACAR . '(' expresion ')'

    '('  shift, and go to state 47


state 32

   93 factor: tCARAENT . '(' expresion ')'

    '('  shift, and go to state 48


state 33

   94 factor: tIDENTIFICADOR . '[' expresion ']'
   95       | tIDENTIFICADOR .

    '['  shift, and go to state 49

    $default  reduce using rule 95 (factor)


state 34

   90 factor: tNOT . factor

    tCONSTENTERA    shift, and go to state 26
    tCONSTCHAR      shift, and go to state 27
    tCONSTCAD       shift, and go to state 28
    tTRUE           shift, and go to state 29
    tFALSE          shift, and go to state 30
    tENTACAR        shift, and go to state 31
    tCARAENT        shift, and go to state 32
    tIDENTIFICADOR  shift, and go to state 33
    tNOT            shift, and go to state 34
    '-'             shift, and go to state 35
    '('             shift, and go to state 36

    factor  go to state 50


state 35

   89 factor: '-' . factor

    tCONSTENTERA    shift, and go to state 26
    tCONSTCHAR      shift, and go to state 27
    tCONSTCAD       shift, and go to state 28
    tTRUE           shift, and go to state 29
    tFALSE          shift, and go to state 30
    tENTACAR        shift, and go to state 31
    tCARAENT        shift, and go to state 32
    tIDENTIFICADOR  shift, and go to state 33
    tNOT            shift, and go to state 34
    '-'             shift, and go to state 35
    '('             shift, and go to state 36

    factor  go to state 51


state 36

   91 factor: '(' . expresion ')'

    tCONSTENTERA    shift, and go to state 26
    tCONSTCHAR      shift, and go to state 27
    tCONSTCAD       shift, and go to state 28
    tTRUE           shift, and go to state 29
    tFALSE          shift, and go to state 30
    tENTACAR        shift, and go to state 31
    tCARAENT        shift, and go to state 32
    tIDENTIFICADOR  shift, and go to state 33
    tNOT            shift, and go to state 34
    '-'             shift, and go to state 35
    '('             shift, and go to state 36

    expresion         go to state 52
    expresion_simple  go to state 38
    termino           go to state 39
    factor            go to state 40


state 37

   15 tipo_variables: tVECTOR '[' expresion . ']' tDE tipo_variables2
   71 expresion: expresion . operador_relacional expresion_simple

    tMEI  shift, and go to state 53
    tMAI  shift, and go to state 54
    tNI   shift, and go to state 55
    ']'   shift, and go to state 56
    '='   shift, and go to state 57
    '<'   shift, and go to state 58
    '>'   shift, and go to state 59

    operador_relacional  go to state 60


state 38

   70 expresion: expresion_simple .
   79 expresion_simple: expresion_simple . operador_aditivo termino

    tOR  shift, and go to state 61
    '+'  shift, and go to state 62
    '-'  shift, and go to state 63

    $default  reduce using rule 70 (expresion)

    operador_aditivo  go to state 64


state 39

   78 expresion_simple: termino .
   84 termino: termino . operador_multiplicativo factor

    tAND  shift, and go to state 65
    tMOD  shift, and go to state 66
    tDIV  shift, and go to state 67
    '*'   shift, and go to state 68

    $default  reduce using rule 78 (expresion_simple)

    operador_multiplicativo  go to state 69


state 40

   83 termino: factor .

    $default  reduce using rule 83 (termino)


state 41

    8 lista_declaraciones: lista_declaraciones ';' declaracion .

    $default  reduce using rule 8 (lista_declaraciones)


state 42

   20 identificadores: identificadores ',' . tIDENTIFICADOR

    tIDENTIFICADOR  shift, and go to state 70


state 43

   30 cabecera_accion: tACCION tIDENTIFICADOR . $@8 parametros_formales

    $default  reduce using rule 29 ($@8)

    $@8  go to state 71


state 44

   40 bloque_instrucciones: tPRINCIPIO . $@9 lista_instrucciones tFIN

    $default  reduce using rule 39 ($@9)

    $@9  go to state 72


state 45

    4 programa: tPROGRAMA tIDENTIFICADOR ';' $@1 declaracion_variables $@2 declaracion_acciones $@3 bloque_instrucciones .

    $default  reduce using rule 4 (programa)


state 46

   28 declaracion_accion: cabecera_accion ';' . $@5 declaracion_variables $@6 declaracion_acciones $@7 bloque_instrucciones

    $default  reduce using rule 25 ($@5)

    $@5  go to state 73


state 47

   92 factor: tENTACAR '(' . expresion ')'

    tCONSTENTERA    shift, and go to state 26
    tCONSTCHAR      shift, and go to state 27
    tCONSTCAD       shift, and go to state 28
    tTRUE           shift, and go to state 29
    tFALSE          shift, and go to state 30
    tENTACAR        shift, and go to state 31
    tCARAENT        shift, and go to state 32
    tIDENTIFICADOR  shift, and go to state 33
    tNOT            shift, and go to state 34
    '-'             shift, and go to state 35
    '('             shift, and go to state 36

    expresion         go to state 74
    expresion_simple  go to state 38
    termino           go to state 39
    factor            go to state 40


state 48

   93 factor: tCARAENT '(' . expresion ')'

    tCONSTENTERA    shift, and go to state 26
    tCONSTCHAR      shift, and go to state 27
    tCONSTCAD       shift, and go to state 28
    tTRUE           shift, and go to state 29
    tFALSE          shift, and go to state 30
    tENTACAR        shift, and go to state 31
    tCARAENT        shift, and go to state 32
    tIDENTIFICADOR  shift, and go to state 33
    tNOT            shift, and go to state 34
    '-'             shift, and go to state 35
    '('             shift, and go to state 36

    expresion         go to state 75
    expresion_simple  go to state 38
    termino           go to state 39
    factor            go to state 40


state 49

   94 factor: tIDENTIFICADOR '[' . expresion ']'

    tCONSTENTERA    shift, and go to state 26
    tCONSTCHAR      shift, and go to state 27
    tCONSTCAD       shift, and go to state 28
    tTRUE           shift, and go to state 29
    tFALSE          shift, and go to state 30
    tENTACAR        shift, and go to state 31
    tCARAENT        shift, and go to state 32
    tIDENTIFICADOR  shift, and go to state 33
    tNOT            shift, and go to state 34
    '-'             shift, and go to state 35
    '('             shift, and go to state 36

    expresion         go to state 76
    expresion_simple  go to state 38
    termino           go to state 39
    factor            go to state 40


state 50

   90 factor: tNOT factor .

    $default  reduce using rule 90 (factor)


state 51

   89 factor: '-' factor .

    $default  reduce using rule 89 (factor)


state 52

   71 expresion: expresion . operador_relacional expresion_simple
   91 factor: '(' expresion . ')'

    tMEI  shift, and go to state 53
    tMAI  shift, and go to state 54
    tNI   shift, and go to state 55
    ')'   shift, and go to state 77
    '='   shift, and go to state 57
    '<'   shift, and go to state 58
    '>'   shift, and go to state 59

    operador_relacional  go to state 60


state 53

   75 operador_relacional: tMEI .

    $default  reduce using rule 75 (operador_relacional)


state 54

   76 operador_relacional: tMAI .

    $default  reduce using rule 76 (operador_relacional)


state 55

   77 operador_relacional: tNI .

    $default  reduce using rule 77 (operador_relacional)


state 56

   15 tipo_variables: tVECTOR '[' expresion ']' . tDE tipo_variables2

    tDE  shift, and go to state 78


state 57

   72 operador_relacional: '=' .

    $default  reduce using rule 72 (operador_relacional)


state 58

   73 operador_relacional: '<' .

    $default  reduce using rule 73 (operador_relacional)


state 59

   74 operador_relacional: '>' .

    $default  reduce using rule 74 (operador_relacional)


state 60

   71 expresion: expresion operador_relacional . expresion_simple

    tCONSTENTERA    shift, and go to state 26
    tCONSTCHAR      shift, and go to state 27
    tCONSTCAD       shift, and go to state 28
    tTRUE           shift, and go to state 29
    tFALSE          shift, and go to state 30
    tENTACAR        shift, and go to state 31
    tCARAENT        shift, and go to state 32
    tIDENTIFICADOR  shift, and go to state 33
    tNOT            shift, and go to state 34
    '-'             shift, and go to state 35
    '('             shift, and go to state 36

    expresion_simple  go to state 79
    termino           go to state 39
    factor            go to state 40


state 61

   82 operador_aditivo: tOR .

    $default  reduce using rule 82 (operador_aditivo)


state 62

   80 operador_aditivo: '+' .

    $default  reduce using rule 80 (operador_aditivo)


state 63

   81 operador_aditivo: '-' .

    $default  reduce using rule 81 (operador_aditivo)


state 64

   79 expresion_simple: expresion_simple operador_aditivo . termino

    tCONSTENTERA    shift, and go to state 26
    tCONSTCHAR      shift, and go to state 27
    tCONSTCAD       shift, and go to state 28
    tTRUE           shift, and go to state 29
    tFALSE          shift, and go to state 30
    tENTACAR        shift, and go to state 31
    tCARAENT        shift, and go to state 32
    tIDENTIFICADOR  shift, and go to state 33
    tNOT            shift, and go to state 34
    '-'             shift, and go to state 35
    '('             shift, and go to state 36

    termino  go to state 80
    factor   go to state 40


state 65

   88 operador_multiplicativo: tAND .

    $default  reduce using rule 88 (operador_multiplicativo)


state 66

   87 operador_multiplicativo: tMOD .

    $default  reduce using rule 87 (operador_multiplicativo)


state 67

   86 operador_multiplicativo: tDIV .

    $default  reduce using rule 86 (operador_multiplicativo)


state 68

   85 operador_multiplicativo: '*' .

    $default  reduce using rule 85 (operador_multiplicativo)


state 69

   84 termino: termino operador_multiplicativo . factor

    tCONSTENTERA    shift, and go to state 26
    tCONSTCHAR      shift, and go to state 27
    tCONSTCAD       shift, and go to state 28
    tTRUE           shift, and go to state 29
    tFALSE          shift, and go to state 30
    tENTACAR        shift, and go to state 31
    tCARAENT        shift, and go to state 32
    tIDENTIFICADOR  shift, and go to state 33
    tNOT            shift, and go to state 34
    '-'             shift, and go to state 35
    '('             shift, and go to state 36

    factor  go to state 81


state 70

   20 identificadores: identificadores ',' tIDENTIFICADOR .

    $default  reduce using rule 20 (identificadores)


state 71

   30 cabecera_accion: tACCION tIDENTIFICADOR $@8 . parametros_formales

    '('  shift, and go to state 82

    $default  reduce using rule 31 (parametros_formales)

    parametros_formales  go to state 83


state 72

   40 bloque_instrucciones: tPRINCIPIO $@9 . lista_instrucciones tFIN

    $default  reduce using rule 42 (lista_instrucciones)

    lista_instrucciones  go to state 84


state 73

   28 declaracion_accion: cabecera_accion ';' $@5 . declaracion_variables $@6 declaracion_acciones $@7 bloque_instrucciones

    tACCION     reduce using rule 5 (declaracion_variables)
    tPRINCIPIO  reduce using rule 5 (declaracion_variables)
    $default    reduce using rule 6 ($@4)

    declaracion_variables  go to state 85
    $@4                    go to state 8


state 74

   71 expresion: expresion . operador_relacional expresion_simple
   92 factor: tENTACAR '(' expresion . ')'

    tMEI  shift, and go to state 53
    tMAI  shift, and go to state 54
    tNI   shift, and go to state 55
    ')'   shift, and go to state 86
    '='   shift, and go to state 57
    '<'   shift, and go to state 58
    '>'   shift, and go to state 59

    operador_relacional  go to state 60


state 75

   71 expresion: expresion . operador_relacional expresion_simple
   93 factor: tCARAENT '(' expresion . ')'

    tMEI  shift, and go to state 53
    tMAI  shift, and go to state 54
    tNI   shift, and go to state 55
    ')'   shift, and go to state 87
    '='   shift, and go to state 57
    '<'   shift, and go to state 58
    '>'   shift, and go to state 59

    operador_relacional  go to state 60


state 76

   71 expresion: expresion . operador_relacional expresion_simple
   94 factor: tIDENTIFICADOR '[' expresion . ']'

    tMEI  shift, and go to state 53
    tMAI  shift, and go to state 54
    tNI   shift, and go to state 55
    ']'   shift, and go to state 88
    '='   shift, and go to state 57
    '<'   shift, and go to state 58
    '>'   shift, and go to state 59

    operador_relacional  go to state 60


state 77

   91 factor: '(' expresion ')' .

    $default  reduce using rule 91 (factor)


state 78

   15 tipo_variables: tVECTOR '[' expresion ']' tDE . tipo_variables2

    tENTERO    shift, and go to state 89
    tCARACTER  shift, and go to state 90
    tBOOLEANO  shift, and go to state 91

    tipo_variables2  go to state 92


state 79

   71 expresion: expresion operador_relacional expresion_simple .
   79 expresion_simple: expresion_simple . operador_aditivo termino

    tOR  shift, and go to state 61
    '+'  shift, and go to state 62
    '-'  shift, and go to state 63

    $default  reduce using rule 71 (expresion)

    operador_aditivo  go to state 64


state 80

   79 expresion_simple: expresion_simple operador_aditivo termino .
   84 termino: termino . operador_multiplicativo factor

    tAND  shift, and go to state 65
    tMOD  shift, and go to state 66
    tDIV  shift, and go to state 67
    '*'   shift, and go to state 68

    $default  reduce using rule 79 (expresion_simple)

    operador_multiplicativo  go to state 69


state 81

   84 termino: termino operador_multiplicativo factor .

    $default  reduce using rule 84 (termino)


state 82

   32 parametros_formales: '(' . lista_parametros ')'

    tVAL  shift, and go to state 93
    tREF  shift, and go to state 94

    $default  reduce using rule 35 (lista_parametros)

    lista_parametros  go to state 95
    parametros        go to state 96
    clase_parametros  go to state 97


state 83

   30 cabecera_accion: tACCION tIDENTIFICADOR $@8 parametros_formales .

    $default  reduce using rule 30 (cabecera_accion)


state 84

   40 bloque_instrucciones: tPRINCIPIO $@9 lista_instrucciones . tFIN
   41 lista_instrucciones: lista_instrucciones . instruccion

    tIDENTIFICADOR  shift, and go to state 98
    tESCRIBIR       shift, and go to state 99
    tLEER           shift, and go to state 100
    tFIN            shift, and go to state 101
    tMQ             shift, and go to state 102
    tSI             shift, and go to state 103

    instruccion        go to state 104
    leer               go to state 105
    escribir           go to state 106
    asignacion         go to state 107
    mientras_que       go to state 108
    seleccion          go to state 109
    invocacion_accion  go to state 110


state 85

   28 declaracion_accion: cabecera_accion ';' $@5 declaracion_variables . $@6 declaracion_acciones $@7 bloque_instrucciones

    $default  reduce using rule 26 ($@6)

    $@6  go to state 111


state 86

   92 factor: tENTACAR '(' expresion ')' .

    $default  reduce using rule 92 (factor)


state 87

   93 factor: tCARAENT '(' expresion ')' .

    $default  reduce using rule 93 (factor)


state 88

   94 factor: tIDENTIFICADOR '[' expresion ']' .

    $default  reduce using rule 94 (factor)


state 89

   16 tipo_variables2: tENTERO .

    $default  reduce using rule 16 (tipo_variables2)


state 90

   17 tipo_variables2: tCARACTER .

    $default  reduce using rule 17 (tipo_variables2)


state 91

   18 tipo_variables2: tBOOLEANO .

    $default  reduce using rule 18 (tipo_variables2)


state 92

   15 tipo_variables: tVECTOR '[' expresion ']' tDE tipo_variables2 .

    $default  reduce using rule 15 (tipo_variables)


state 93

   37 clase_parametros: tVAL .

    $default  reduce using rule 37 (clase_parametros)


state 94

   38 clase_parametros: tREF .

    $default  reduce using rule 38 (clase_parametros)


state 95

   32 parametros_formales: '(' lista_parametros . ')'
   33 lista_parametros: lista_parametros . ';' parametros

    ';'  shift, and go to state 112
    ')'  shift, and go to state 113


state 96

   34 lista_parametros: parametros .

    $default  reduce using rule 34 (lista_parametros)


state 97

   36 parametros: clase_parametros . declaracion_parametros

    tENTERO    shift, and go to state 10
    tCARACTER  shift, and go to state 11
    tBOOLEANO  shift, and go to state 12
    tVECTOR    shift, and go to state 13

    declaracion_parametros  go to state 114
    tipo_variables          go to state 115


state 98

   55 asignacion: tIDENTIFICADOR . tOPAS expresion ';'
   56           | tIDENTIFICADOR . '[' expresion ']' tOPAS expresion ';'
   64 invocacion_accion: tIDENTIFICADOR . argumentos $@12 ';'
   66                  | tIDENTIFICADOR . $@13 ';'

    tOPAS  shift, and go to state 116
    '['    shift, and go to state 117
    '('    shift, and go to state 118

    $default  reduce using rule 65 ($@13)

    $@13        go to state 119
    argumentos  go to state 120


state 99

   52 escribir: tESCRIBIR . '(' lista_escribibles ')' ';'

    '('  shift, and go to state 121


state 100

   49 leer: tLEER . '(' lista_asignables ')' ';'

    '('  shift, and go to state 122


state 101

   40 bloque_instrucciones: tPRINCIPIO $@9 lista_instrucciones tFIN .

    $default  reduce using rule 40 (bloque_instrucciones)


state 102

   58 mientras_que: tMQ . expresion $@10 lista_instrucciones tFMQ

    tCONSTENTERA    shift, and go to state 26
    tCONSTCHAR      shift, and go to state 27
    tCONSTCAD       shift, and go to state 28
    tTRUE           shift, and go to state 29
    tFALSE          shift, and go to state 30
    tENTACAR        shift, and go to state 31
    tCARAENT        shift, and go to state 32
    tIDENTIFICADOR  shift, and go to state 33
    tNOT            shift, and go to state 34
    '-'             shift, and go to state 35
    '('             shift, and go to state 36

    expresion         go to state 123
    expresion_simple  go to state 38
    termino           go to state 39
    factor            go to state 40


state 103

   60 seleccion: tSI . expresion $@11 tENT lista_instrucciones resto_seleccion tFSI

    tCONSTENTERA    shift, and go to state 26
    tCONSTCHAR      shift, and go to state 27
    tCONSTCAD       shift, and go to state 28
    tTRUE           shift, and go to state 29
    tFALSE          shift, and go to state 30
    tENTACAR        shift, and go to state 31
    tCARAENT        shift, and go to state 32
    tIDENTIFICADOR  shift, and go to state 33
    tNOT            shift, and go to state 34
    '-'             shift, and go to state 35
    '('             shift, and go to state 36

    expresion         go to state 124
    expresion_simple  go to state 38
    termino           go to state 39
    factor            go to state 40


state 104

   41 lista_instrucciones: lista_instrucciones instruccion .

    $default  reduce using rule 41 (lista_instrucciones)


state 105

   43 instruccion: leer .

    $default  reduce using rule 43 (instruccion)


state 106

   44 instruccion: escribir .

    $default  reduce using rule 44 (instruccion)


state 107

   45 instruccion: asignacion .

    $default  reduce using rule 45 (instruccion)


state 108

   47 instruccion: mientras_que .

    $default  reduce using rule 47 (instruccion)


state 109

   46 instruccion: seleccion .

    $default  reduce using rule 46 (instruccion)


state 110

   48 instruccion: invocacion_accion .

    $default  reduce using rule 48 (instruccion)


state 111

   28 declaracion_accion: cabecera_accion ';' $@5 declaracion_variables $@6 . declaracion_acciones $@7 bloque_instrucciones

    $default  reduce using rule 23 (declaracion_acciones)

    declaracion_acciones  go to state 125


state 112

   33 lista_parametros: lista_parametros ';' . parametros

    tVAL  shift, and go to state 93
    tREF  shift, and go to state 94

    parametros        go to state 126
    clase_parametros  go to state 97


state 113

   32 parametros_formales: '(' lista_parametros ')' .

    $default  reduce using rule 32 (parametros_formales)


state 114

   36 parametros: clase_parametros declaracion_parametros .

    $default  reduce using rule 36 (parametros)


state 115

   11 declaracion_parametros: tipo_variables . identificadores_parametros

    tIDENTIFICADOR  shift, and go to state 127

    identificadores_parametros  go to state 128


state 116

   55 asignacion: tIDENTIFICADOR tOPAS . expresion ';'
